#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
çƒ­æ›´æ–°éªŒè¯è„šæœ¬

åŠŸèƒ½ï¼š
1. éªŒè¯æ‰€æœ‰æœåŠ¡éƒ½æ”¯æŒçƒ­æ›´æ–°
2. æ£€æŸ¥çƒ­æ›´æ–°é…ç½®æ˜¯å¦æ­£ç¡®
3. æµ‹è¯•çƒ­æ›´æ–°åŠŸèƒ½æ˜¯å¦æ­£å¸¸
4. ç”ŸæˆéªŒè¯æŠ¥å‘Š

ä½¿ç”¨æ–¹æ³•ï¼š
    python scripts/hot_reload/verify_hot_reload.py
    python scripts/hot_reload/verify_hot_reload.py --verbose
    python scripts/hot_reload/verify_hot_reload.py --test  # æ‰§è¡Œå®é™…æµ‹è¯•
"""

import os
import sys
import json
import argparse
import requests
from typing import Dict, List, Tuple
from datetime import datetime

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°è·¯å¾„
project_root = os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(__file__))))
sys.path.insert(0, project_root)


# é…ç½®
API_BASE_URL = os.getenv("API_BASE_URL", "http://localhost:8001")
HOT_RELOAD_API = f"{API_BASE_URL}/api/v1/hot-reload"

# å¿…é¡»æ”¯æŒçƒ­æ›´æ–°çš„æœåŠ¡åˆ—è¡¨
REQUIRED_SERVICES = [
    {"name": "web", "port": 8001, "type": "fastapi", "description": "Web ä¸»æœåŠ¡"},
    {"name": "bazi_core", "port": 9001, "type": "grpc", "description": "å…«å­—æ ¸å¿ƒè®¡ç®—"},
    {"name": "bazi_fortune", "port": 9002, "type": "grpc", "description": "è¿åŠ¿è®¡ç®—"},
    {"name": "bazi_analyzer", "port": 9003, "type": "grpc", "description": "å…«å­—åˆ†æ"},
    {"name": "bazi_rule", "port": 9004, "type": "grpc", "description": "è§„åˆ™åŒ¹é…"},
    {"name": "fortune_analysis", "port": 9005, "type": "grpc", "description": "è¿åŠ¿åˆ†æ"},
    {"name": "payment_service", "port": 9006, "type": "grpc", "description": "æ”¯ä»˜æœåŠ¡"},
    {"name": "fortune_rule", "port": 9007, "type": "grpc", "description": "è¿åŠ¿è§„åˆ™"},
    {"name": "intent_service", "port": 9008, "type": "grpc", "description": "æ„å›¾è¯†åˆ«"},
    {"name": "prompt_optimizer", "port": 9009, "type": "grpc", "description": "æç¤ºä¼˜åŒ–"},
    {"name": "desk_fengshui", "port": 9010, "type": "grpc", "description": "é£æ°´åˆ†æ"},
]

# å¿…é¡»å­˜åœ¨çš„çƒ­æ›´æ–°æ–‡ä»¶
REQUIRED_FILES = [
    "server/hot_reload/__init__.py",
    "server/hot_reload/hot_reload_manager.py",
    "server/hot_reload/version_manager.py",
    "server/hot_reload/reloaders.py",
    "server/hot_reload/file_monitor.py",
    "server/hot_reload/api.py",
    "server/hot_reload/microservice_reloader.py",
    "server/hot_reload/cluster_synchronizer.py",
]

# å¿…é¡»ç›‘æ§çš„ç›®å½•
REQUIRED_WATCH_DIRS = [
    "src",
    "server",
    "services",
]


class HotReloadVerifier:
    """çƒ­æ›´æ–°éªŒè¯å™¨"""
    
    def __init__(self, verbose: bool = False):
        self.verbose = verbose
        self.results: List[Dict] = []
        self.passed = 0
        self.failed = 0
        self.warnings = 0
    
    def log(self, message: str, level: str = "info"):
        """æ‰“å°æ—¥å¿—"""
        prefix = {
            "info": "â„¹ï¸ ",
            "success": "âœ…",
            "warning": "âš ï¸ ",
            "error": "âŒ",
        }.get(level, "  ")
        
        print(f"{prefix} {message}")
    
    def add_result(self, check_name: str, passed: bool, message: str, details: Dict = None):
        """æ·»åŠ æ£€æŸ¥ç»“æœ"""
        self.results.append({
            "check": check_name,
            "passed": passed,
            "message": message,
            "details": details or {},
            "timestamp": datetime.now().isoformat()
        })
        
        if passed:
            self.passed += 1
            self.log(f"{check_name}: {message}", "success")
        else:
            self.failed += 1
            self.log(f"{check_name}: {message}", "error")
    
    def add_warning(self, check_name: str, message: str):
        """æ·»åŠ è­¦å‘Š"""
        self.warnings += 1
        self.log(f"{check_name}: {message}", "warning")
    
    def verify_files_exist(self) -> bool:
        """éªŒè¯çƒ­æ›´æ–°æ–‡ä»¶æ˜¯å¦å­˜åœ¨"""
        self.log("\nğŸ“ æ£€æŸ¥çƒ­æ›´æ–°æ–‡ä»¶...", "info")
        
        all_exist = True
        for file_path in REQUIRED_FILES:
            full_path = os.path.join(project_root, file_path)
            exists = os.path.exists(full_path)
            
            if exists:
                if self.verbose:
                    self.log(f"  æ–‡ä»¶å­˜åœ¨: {file_path}", "success")
            else:
                self.log(f"  æ–‡ä»¶ç¼ºå¤±: {file_path}", "error")
                all_exist = False
        
        self.add_result(
            "æ–‡ä»¶æ£€æŸ¥",
            all_exist,
            f"æ‰€æœ‰å¿…éœ€æ–‡ä»¶éƒ½å­˜åœ¨" if all_exist else "éƒ¨åˆ†æ–‡ä»¶ç¼ºå¤±"
        )
        return all_exist
    
    def verify_watch_directories(self) -> bool:
        """éªŒè¯ç›‘æ§ç›®å½•é…ç½®"""
        self.log("\nğŸ“‚ æ£€æŸ¥ç›‘æ§ç›®å½•é…ç½®...", "info")
        
        try:
            from server.hot_reload.reloaders import SourceCodeReloader
            
            configured_dirs = set(SourceCodeReloader._SEARCH_DIRECTORIES)
            required_dirs = set(REQUIRED_WATCH_DIRS)
            
            missing = required_dirs - configured_dirs
            
            if missing:
                self.add_result(
                    "ç›‘æ§ç›®å½•",
                    False,
                    f"ç¼ºå°‘ç›‘æ§ç›®å½•: {missing}",
                    {"configured": list(configured_dirs), "required": list(required_dirs)}
                )
                return False
            
            self.add_result(
                "ç›‘æ§ç›®å½•",
                True,
                f"æ‰€æœ‰å¿…éœ€ç›®å½•éƒ½å·²é…ç½®ç›‘æ§: {REQUIRED_WATCH_DIRS}",
                {"configured": list(configured_dirs)}
            )
            return True
            
        except ImportError as e:
            self.add_result("ç›‘æ§ç›®å½•", False, f"å¯¼å…¥å¤±è´¥: {e}")
            return False
    
    def verify_reloaders(self) -> bool:
        """éªŒè¯é‡è½½å™¨é…ç½®"""
        self.log("\nğŸ”„ æ£€æŸ¥é‡è½½å™¨é…ç½®...", "info")
        
        try:
            from server.hot_reload.reloaders import RELOADERS, RELOAD_ORDER
            
            required_reloaders = {'rules', 'content', 'config', 'cache', 'source', 'microservice', 'singleton'}
            configured_reloaders = set(RELOADERS.keys())
            
            missing = required_reloaders - configured_reloaders
            
            if missing:
                self.add_result(
                    "é‡è½½å™¨é…ç½®",
                    False,
                    f"ç¼ºå°‘é‡è½½å™¨: {missing}",
                    {"configured": list(configured_reloaders)}
                )
                return False
            
            # æ£€æŸ¥é‡è½½é¡ºåº
            if len(RELOAD_ORDER) < len(required_reloaders):
                self.add_warning("é‡è½½å™¨é…ç½®", f"é‡è½½é¡ºåºå¯èƒ½ä¸å®Œæ•´: {RELOAD_ORDER}")
            
            self.add_result(
                "é‡è½½å™¨é…ç½®",
                True,
                f"æ‰€æœ‰é‡è½½å™¨å·²é…ç½®: {list(configured_reloaders)}",
                {"reload_order": RELOAD_ORDER}
            )
            return True
            
        except ImportError as e:
            self.add_result("é‡è½½å™¨é…ç½®", False, f"å¯¼å…¥å¤±è´¥: {e}")
            return False
    
    def verify_api_available(self) -> bool:
        """éªŒè¯çƒ­æ›´æ–° API æ˜¯å¦å¯ç”¨"""
        self.log("\nğŸŒ æ£€æŸ¥çƒ­æ›´æ–° API...", "info")
        
        try:
            response = requests.get(f"{HOT_RELOAD_API}/status", timeout=5)
            
            if response.status_code == 200:
                data = response.json()
                self.add_result(
                    "API å¯ç”¨æ€§",
                    True,
                    "çƒ­æ›´æ–° API å¯ç”¨",
                    data
                )
                return True
            else:
                self.add_result(
                    "API å¯ç”¨æ€§",
                    False,
                    f"API è¿”å›é”™è¯¯çŠ¶æ€ç : {response.status_code}"
                )
                return False
                
        except requests.exceptions.ConnectionError:
            self.add_warning("API å¯ç”¨æ€§", f"æ— æ³•è¿æ¥åˆ° {API_BASE_URL}ï¼ˆæœåŠ¡å¯èƒ½æœªå¯åŠ¨ï¼‰")
            return False
        except Exception as e:
            self.add_result("API å¯ç”¨æ€§", False, f"æ£€æŸ¥å¤±è´¥: {e}")
            return False
    
    def verify_health_check(self) -> bool:
        """éªŒè¯å¥åº·æ£€æŸ¥ç«¯ç‚¹"""
        self.log("\nğŸ¥ æ£€æŸ¥å¥åº·æ£€æŸ¥ç«¯ç‚¹...", "info")
        
        try:
            response = requests.get(f"{HOT_RELOAD_API}/health", timeout=5)
            
            if response.status_code == 200:
                data = response.json()
                status = data.get('status', 'unknown')
                
                self.add_result(
                    "å¥åº·æ£€æŸ¥",
                    status in ['healthy', 'degraded'],
                    f"å¥åº·æ£€æŸ¥çŠ¶æ€: {status}",
                    data.get('details', {})
                )
                return status == 'healthy'
            else:
                self.add_result("å¥åº·æ£€æŸ¥", False, f"å¥åº·æ£€æŸ¥å¤±è´¥: {response.status_code}")
                return False
                
        except requests.exceptions.ConnectionError:
            self.add_warning("å¥åº·æ£€æŸ¥", "æ— æ³•è¿æ¥åˆ°æœåŠ¡")
            return False
        except Exception as e:
            self.add_result("å¥åº·æ£€æŸ¥", False, f"æ£€æŸ¥å¤±è´¥: {e}")
            return False
    
    def verify_microservices(self) -> bool:
        """éªŒè¯å¾®æœåŠ¡çƒ­æ›´æ–°é…ç½®"""
        self.log("\nğŸ”§ æ£€æŸ¥å¾®æœåŠ¡çƒ­æ›´æ–°é…ç½®...", "info")
        
        try:
            # æ£€æŸ¥æ¯ä¸ªå¾®æœåŠ¡ç›®å½•æ˜¯å¦æœ‰ grpc_server.py
            all_configured = True
            for service in REQUIRED_SERVICES:
                if service['type'] != 'grpc':
                    continue
                
                service_dir = os.path.join(project_root, "services", service['name'])
                grpc_server_path = os.path.join(service_dir, "grpc_server.py")
                
                if os.path.exists(grpc_server_path):
                    if self.verbose:
                        self.log(f"  {service['name']}: grpc_server.py å­˜åœ¨", "success")
                else:
                    # æŸäº›æœåŠ¡å¯èƒ½ä¸å­˜åœ¨å•ç‹¬ç›®å½•
                    if self.verbose:
                        self.add_warning("å¾®æœåŠ¡é…ç½®", f"{service['name']}: grpc_server.py ä¸å­˜åœ¨")
            
            self.add_result(
                "å¾®æœåŠ¡é…ç½®",
                True,
                f"å·²æ£€æŸ¥ {len([s for s in REQUIRED_SERVICES if s['type'] == 'grpc'])} ä¸ªå¾®æœåŠ¡"
            )
            return True
            
        except Exception as e:
            self.add_result("å¾®æœåŠ¡é…ç½®", False, f"æ£€æŸ¥å¤±è´¥: {e}")
            return False
    
    def test_hot_reload(self) -> bool:
        """æµ‹è¯•çƒ­æ›´æ–°åŠŸèƒ½"""
        self.log("\nğŸ§ª æµ‹è¯•çƒ­æ›´æ–°åŠŸèƒ½...", "info")
        
        try:
            # 1. è§¦å‘çƒ­æ›´æ–°æ£€æŸ¥
            response = requests.post(f"{HOT_RELOAD_API}/check", timeout=30)
            
            if response.status_code == 200:
                data = response.json()
                self.add_result(
                    "çƒ­æ›´æ–°æµ‹è¯•",
                    data.get('success', False),
                    data.get('message', 'æœªçŸ¥ç»“æœ'),
                    data
                )
                return data.get('success', False)
            else:
                self.add_result("çƒ­æ›´æ–°æµ‹è¯•", False, f"è¯·æ±‚å¤±è´¥: {response.status_code}")
                return False
                
        except requests.exceptions.ConnectionError:
            self.add_warning("çƒ­æ›´æ–°æµ‹è¯•", "æ— æ³•è¿æ¥åˆ°æœåŠ¡ï¼Œè·³è¿‡æµ‹è¯•")
            return False
        except Exception as e:
            self.add_result("çƒ­æ›´æ–°æµ‹è¯•", False, f"æµ‹è¯•å¤±è´¥: {e}")
            return False
    
    def generate_report(self) -> Dict:
        """ç”ŸæˆéªŒè¯æŠ¥å‘Š"""
        return {
            "timestamp": datetime.now().isoformat(),
            "summary": {
                "total_checks": len(self.results),
                "passed": self.passed,
                "failed": self.failed,
                "warnings": self.warnings,
                "success_rate": f"{(self.passed / len(self.results) * 100):.1f}%" if self.results else "0%"
            },
            "results": self.results,
            "required_services": REQUIRED_SERVICES,
            "required_files": REQUIRED_FILES,
            "required_watch_dirs": REQUIRED_WATCH_DIRS
        }
    
    def run(self, run_tests: bool = False) -> bool:
        """è¿è¡Œæ‰€æœ‰éªŒè¯"""
        print("\n" + "="*60)
        print("ğŸ”¥ çƒ­æ›´æ–°ç³»ç»ŸéªŒè¯")
        print("="*60)
        
        # 1. éªŒè¯æ–‡ä»¶
        self.verify_files_exist()
        
        # 2. éªŒè¯ç›‘æ§ç›®å½•
        self.verify_watch_directories()
        
        # 3. éªŒè¯é‡è½½å™¨
        self.verify_reloaders()
        
        # 4. éªŒè¯å¾®æœåŠ¡é…ç½®
        self.verify_microservices()
        
        # 5. éªŒè¯ APIï¼ˆå¦‚æœæœåŠ¡è¿è¡Œä¸­ï¼‰
        api_available = self.verify_api_available()
        
        if api_available:
            # 6. éªŒè¯å¥åº·æ£€æŸ¥
            self.verify_health_check()
            
            # 7. æµ‹è¯•çƒ­æ›´æ–°ï¼ˆå¦‚æœæŒ‡å®šï¼‰
            if run_tests:
                self.test_hot_reload()
        
        # ç”ŸæˆæŠ¥å‘Š
        report = self.generate_report()
        
        # æ‰“å°æ€»ç»“
        print("\n" + "="*60)
        print("ğŸ“Š éªŒè¯ç»“æœæ€»ç»“")
        print("="*60)
        print(f"æ€»æ£€æŸ¥æ•°: {report['summary']['total_checks']}")
        print(f"é€šè¿‡: {report['summary']['passed']}")
        print(f"å¤±è´¥: {report['summary']['failed']}")
        print(f"è­¦å‘Š: {report['summary']['warnings']}")
        print(f"æˆåŠŸç‡: {report['summary']['success_rate']}")
        print("="*60)
        
        # ä¿å­˜æŠ¥å‘Š
        report_path = os.path.join(project_root, "logs", "hot_reload_verification.json")
        os.makedirs(os.path.dirname(report_path), exist_ok=True)
        with open(report_path, 'w', encoding='utf-8') as f:
            json.dump(report, f, ensure_ascii=False, indent=2)
        print(f"\nğŸ“„ æŠ¥å‘Šå·²ä¿å­˜åˆ°: {report_path}")
        
        return self.failed == 0


def main():
    parser = argparse.ArgumentParser(description="çƒ­æ›´æ–°éªŒè¯è„šæœ¬")
    parser.add_argument("--verbose", "-v", action="store_true", help="æ˜¾ç¤ºè¯¦ç»†ä¿¡æ¯")
    parser.add_argument("--test", "-t", action="store_true", help="æ‰§è¡Œå®é™…çš„çƒ­æ›´æ–°æµ‹è¯•")
    parser.add_argument("--api-url", default=API_BASE_URL, help="API åŸºç¡€ URL")
    args = parser.parse_args()
    
    global API_BASE_URL, HOT_RELOAD_API
    API_BASE_URL = args.api_url
    HOT_RELOAD_API = f"{API_BASE_URL}/api/v1/hot-reload"
    
    verifier = HotReloadVerifier(verbose=args.verbose)
    success = verifier.run(run_tests=args.test)
    
    sys.exit(0 if success else 1)


if __name__ == "__main__":
    main()

